# Wine-Quality-MLOps-End-to-End

./: .env.example  .gitignore  Dockerfile  README.md  predict_good_wine.ipynb  pyproject.toml  urls.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
api/: main.py
data/: dataset.csv.dvc
models/: model.pkl.dvc
src/: predict.py  retrain.py  train.py
tests/: test_predict.py
